#ifndef FRAME
#define FRAME
#include <iostream>
struct Frame
{
    std::string graphical_buffer;
    bool bits[8];
    char value;
};

#endif